# SafeStakeOperator

./: .env  .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  SUMMARY.md  build.rs  docker-compose-boot.yml  docker-compose-boot.yml.bk  docker-compose-operator-mev.yml  docker-compose-operator.yml  docker-compose-operator.yml.bk  docker-compose-root.yml  docker-compose.example.yml  docker-compose.yml  docker-entrypoint  main.rs  safestake-ecosystem.md  safestake-running-a-boot-node-on-going.md  safestake-running-an-operator-node-on-going.md  safestake-tech-stack.md  safestake-tokenomics-ongoing.md  update_record.sh
.github/workflows/: ci_dev-custom-port.yml  ci_dev-dencun.yml  ci_dev-slash.yml  ci_dev-statge2.yml  ci_dev.yml  ci_goerli_dev.yml  ci_lighthouse_5_2.yml  ci_lighthouse_5_3.yml  ci_main.yml  ci_malicisous.yml  ci_optimize-memory.yml  ci_staging.yml  ci_test.yml  ci_testnet.yml  ci_va-exit.yml
boot_config/: boot_enrs.yaml
common/dvf_directory/: Cargo.toml
common/dvf_directory/src/: lib.rs
common/dvf_version/: Cargo.toml
common/dvf_version/src/: lib.rs
contract_config/: SafeStakeNetwork.json  SafeStakeRegistry.json  configs.yml
docker-log-configure/: daemon.json
docs/: SUMMARY.md  development.md  safestake-ecosystem.md  safestake-license-attribution.md  safestake-running-a-boot-node-on-going.md  safestake-running-a-boot-node.md  safestake-running-an-operator-node-on-going.md  safestake-running-an-operator-node.md  safestake-tech-dkg.md  safestake-tech-stack.md
geth/: Dockerfile  docker-entrypoint
hotstuff/: Cargo.toml  run.sh
hotstuff/config/: Cargo.toml
hotstuff/config/src/: lib.rs
hotstuff/consensus/: Cargo.toml
hotstuff/consensus/src/: aggregator.rs  config.rs  consensus.rs  core.rs  error.rs  helper.rs  lib.rs  mempool.rs  messages.rs  proposer.rs  synchronizer.rs
hotstuff/crypto/: Cargo.toml
hotstuff/crypto/src/: lib.rs
hotstuff/mempool/: Cargo.toml
hotstuff/mempool/src/: batch_maker.rs  config.rs  helper.rs  lib.rs  mempool.rs  processor.rs  quorum_waiter.rs  synchronizer.rs
hotstuff/network/: Cargo.toml
hotstuff/network/src/: dvf_message.rs  error.rs  lib.rs  receiver.rs  reliable_sender.rs  simple_sender.rs
hotstuff/store/: Cargo.toml
hotstuff/store/src/: lib.rs
hotstuff/utils/: Cargo.toml
hotstuff/utils/src/: lib.rs  monitored_channel.rs  size_monitor.rs
scripts/: beacon_run.sh  clean_container_log.sh  dvf_operator_run.sh  dvf_root_run.sh  get_enr.sh  geth_install.sh  geth_run.sh
src/: lib.rs  main.rs  main.rs123123  metrics.rs
src/crypto/: bls.rs  define.rs  dkg.rs  elgamal.rs  generic_threshold.rs  mod.rs  threshold.rs
src/crypto/impls/: blst.rs  mod.rs
src/deposit/: mod.rs
src/exit/: mod.rs
src/math/: bigint_ext.rs  mod.rs  polynomial.rs
src/network/: behaviour.rs  bootnode.rs  dvfnode.rs  io_committee.rs  main.rs  mod.rs
src/node/: config.rs  contract.rs  db.rs  discovery.rs  dvfcore.rs  gossipsub_event.rs  mod.rs  new_contract.rs  new_node.rs  node.rs  status_report.rs  utils.rs
src/simulator/: checks.rs  local_beacon_node.rs  local_network.rs  local_validator_client.rs  mod.rs  validator_files.rs
src/test_utils/: mod.rs
src/utils/: blst_utils.rs  error.rs  ip_util.rs  mod.rs  rand_utils.rs
src/validation/: attestation_service.rs  beacon_node_fallback.rs  block_service.rs  check_synced.rs  cli.rs  config.rs  doppelganger_service.rs  duties_service.rs  fee_recipient_file.rs  generic_operator_committee.rs  graffiti_file.rs  initialized_validators.rs  key_cache.rs  latency.rs  mod.rs  notifier.rs  operator.rs  operator_committee.rs  operator_committee_definitions.rs  operator_committees.rs  preparation_service.rs  signing_method.rs  sync_committee_service.rs  validator_store.rs
src/validation/account_utils/: mod.rs  validator_definitions.rs
src/validation/duties_service/: sync.rs
src/validation/eth2_keystore_share/: keystore_share.rs  mod.rs
src/validation/http_api/: api_secret.rs  create_validator.rs  graffiti.rs  keystores.rs  mod.rs  remotekeys.rs  tests.rs
src/validation/http_metrics/: metrics.rs  mod.rs
src/validation/impls/: fake.rs  hotstuff.rs  mod.rs
src/validation/signing_method/: web3signer.rs
src/validation/validator_dir/: mod.rs  share_builder.rs
tests/: test_bls.rs  test_elgamal.rs  test_generic_threshold.rs  test_network.rs  test_operator_committee.rs  test_threshold.rs
