[package]
name = "dvf"
version = "0.1.0"
authors = ["Zico <zhicong303@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
miracl_core = {version = "2.7.0", features = ["bls12381"]}
num-bigint = {version = "0.4.0", features = ["rand"]}
#rand = "0.8.4"
num-traits = "0.2.8"
array-init = "2.0.0"

rayon = "1.4.1"
blst = "0.3.3"
eth2_hashing = "0.3.0"

#node_test_rig = { path = "lighthouse/testing/node_test_rig" }
#simulator = { path = "lighthouse/testing/simulator" }
types = { path = "lighthouse/consensus/types" }
#lighthouse_bls = { path = "lighthouse/crypto/bls", package="bls"}

# hotstuff
crypto = { path = "hotstuff/crypto" }
store = { path = "hotstuff/store" }
consensus = { path = "hotstuff/consensus" }
mempool = { path = "hotstuff/mempool" }
network = { path = "hotstuff/network"}
node = { path = "hotstuff/node"}
env_logger = "0.8.2"
log = "0.4.0"
tokio-util = { version = "0.6.2", features = ["codec"] }
bytes = "1.0.1"
downcast-rs = "1.2.0"


tree_hash = "0.4.1"
clap = "2.33.3"
slashing_protection = { path = "lighthouse/validator_client/slashing_protection" }
slot_clock = { path = "lighthouse/common/slot_clock" }
safe_arith = { path = "lighthouse/consensus/safe_arith" }
serde = "1.0.116"
serde_derive = "1.0.116"
serde_yaml = "0.8.13"
bincode = "1.3.1"
serde_json = "1.0.58"
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_trace"] }
tokio = { version = "1.14.0", features = ["time", "rt-multi-thread"] }
futures = "0.3.7"
dirs = "3.0.1"
directory = { path = "lighthouse/common/directory" }
lockfile = { path = "lighthouse/common/lockfile" }
environment = { path = "lighthouse/lighthouse/environment" }
parking_lot = "0.12.0"
exit-future = "0.2.0"
filesystem = { path = "lighthouse/common/filesystem" }
hex = "0.4.2"
deposit_contract = { path = "lighthouse/common/deposit_contract" }
bls = { path = "lighthouse/crypto/bls" }
eth2 = { path = "lighthouse/common/eth2" }
tempfile = "3.1.0"
validator_dir = { path = "lighthouse/common/validator_dir" , features = ["insecure_keys"]}
clap_utils = { path = "lighthouse/common/clap_utils" }
eth2_keystore = { path = "lighthouse/crypto/eth2_keystore" }
account_utils = { path = "lighthouse/common/account_utils" }
lighthouse_version = { path = "lighthouse/common/lighthouse_version" }
warp_utils = { path = "lighthouse/common/warp_utils" }
warp = "0.3.2"
hyper = "0.14.4"
eth2_serde_utils = "0.1.1"
libsecp256k1 = "0.7.0"
ring = "0.16.19"
rand = { version = "0.8.5", features = ["small_rng"] }
lighthouse_metrics = { path = "lighthouse/common/lighthouse_metrics" }
lazy_static = "1.4.0"
itertools = "0.10.0"
monitoring_api = { path = "lighthouse/common/monitoring_api" }
sensitive_url = { path = "lighthouse/common/sensitive_url" }
task_executor = { path = "lighthouse/common/task_executor" }
eth2_wallet = { path = "lighthouse/crypto/eth2_wallet" }
reqwest = { version = "0.11.0", features = ["json","stream"] }
url = "2.2.2"
regex = "1.5.5"
rpassword = "5.0.0"
zeroize = { version = "1.4.2", features = ["zeroize_derive"] }

beacon_node = { path = "lighthouse/beacon_node" }


[patch]
[patch.crates-io]
fixed-hash = { git = "https://github.com/paritytech/parity-common", rev="df638ab0885293d21d656dc300d39236b69ce57d" }
warp = { git = "https://github.com/macladson/warp", rev="7e75acc368229a46a236a8c991bf251fe7fe50ef" }
eth2_ssz = { path = "lighthouse/consensus/ssz" }
eth2_ssz_derive = { path = "lighthouse/consensus/ssz_derive" }
eth2_ssz_types = { path = "lighthouse/consensus/ssz_types" }
eth2_hashing = { path = "lighthouse/crypto/eth2_hashing" }
tree_hash = { path = "lighthouse/consensus/tree_hash" }
tree_hash_derive = { path = "lighthouse/consensus/tree_hash_derive" }
eth2_serde_utils = { path = "lighthouse/consensus/serde_utils" }



[features]
default = ["fake_committee"]
fake_committee = []
hotstuff_committee = []

[dev-dependencies]
tokio-test = "*"

