[package]
name = "hotstuff_config"
version = "0.1.0"
authors = ["Alberto Sonnino <alberto@sonnino.com>"]
edition = "2018"
publish = false

[dependencies]
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
rand = "0.7.3"
thiserror = "1.0.21"
crypto = { path = "../crypto" }
consensus = { path = "../consensus" }
mempool = { path = "../mempool" }
hex = "0.4"
