[package]
name = "crypto"
version = "0.1.0"
authors = ["Alberto Sonnino <alberto@sonnino.com>"]
edition = "2018"
publish = false

[dependencies]
tokio = { version = "1.5.0", features = ["sync", "rt", "macros"] }
ed25519-dalek = { version = "1.0.1", features = ["batch"] }
secp256k1 = { version = "0.24.0", features = ["global-context", "rand-std", "bitcoin_hashes", "std"] }
serde = { version = "1.0", features = ["derive"] }
#rand = "0.7.3"
base64 = "0.13.0"
zeroize = { version = "1.4.2", features = ["zeroize_derive"] }