[package]
name = "mempool"
version = "0.1.0"
authors = ["Alberto Sonnino <asonnino@fb.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.5.0", features = ["sync", "rt", "macros"] }
ed25519-dalek = { version = "2.1.1", features = ["digest"] }
serde = { version = "1.0", features = ["derive"] }
bytes = "1.0.1"
log = "0.4.14"
bincode = "1.3.3"
futures = "0.3.14"
async-trait = "0.1.50"
exit-future = "0.2.0"
crypto = { path = "../crypto" }
store = { path = "../store" }
network = { path = "../network" }
utils = { path = "../utils" }

[dev-dependencies]
tokio-util = { version = "0.6.2", features= ["codec"] }
rand = "0.7.3"

[features]
benchmark = []
